; ModuleID = '/home/carl/AnghaBench/pifs/src/extr_πfs.c_pifs_readdir.c'
source_filename = "/home/carl/AnghaBench/pifs/src/extr_\CF\80fs.c_pifs_readdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_file_info = type { i64 }
%struct.dirent = type { i32, i32 }

@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32 (i8*, i32, i32*, i32)*, i32, %struct.fuse_file_info*)* @pifs_readdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pifs_readdir(i8* %0, i8* %1, i32 (i8*, i32, i32*, i32)* %2, i32 %3, %struct.fuse_file_info* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32 (i8*, i32, i32*, i32)*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.fuse_file_info*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.dirent*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 (i8*, i32, i32*, i32)* %2, i32 (i8*, i32, i32*, i32)** %9, align 8
  store i32 %3, i32* %10, align 4
  store %struct.fuse_file_info* %4, %struct.fuse_file_info** %11, align 8
  %15 = load %struct.fuse_file_info*, %struct.fuse_file_info** %11, align 8
  %16 = getelementptr inbounds %struct.fuse_file_info, %struct.fuse_file_info* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to i32*
  store i32* %18, i32** %12, align 8
  %19 = load i32, i32* %10, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %5
  %22 = load i32*, i32** %12, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @seekdir(i32* %22, i32 %23)
  br label %25

25:                                               ; preds = %21, %5
  br label %26

26:                                               ; preds = %48, %25
  store i32 0, i32* @errno, align 4
  %27 = load i32*, i32** %12, align 8
  %28 = call %struct.dirent* @readdir(i32* %27)
  store %struct.dirent* %28, %struct.dirent** %14, align 8
  %29 = load %struct.dirent*, %struct.dirent** %14, align 8
  %30 = icmp ne %struct.dirent* %29, null
  br i1 %30, label %38, label %31

31:                                               ; preds = %26
  %32 = load i32, i32* @errno, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i32, i32* @errno, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %6, align 4
  br label %52

37:                                               ; preds = %31
  br label %51

38:                                               ; preds = %26
  %39 = load i32 (i8*, i32, i32*, i32)*, i32 (i8*, i32, i32*, i32)** %9, align 8
  %40 = load i8*, i8** %8, align 8
  %41 = load %struct.dirent*, %struct.dirent** %14, align 8
  %42 = getelementptr inbounds %struct.dirent, %struct.dirent* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = load %struct.dirent*, %struct.dirent** %14, align 8
  %45 = getelementptr inbounds %struct.dirent, %struct.dirent* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = call i32 %39(i8* %40, i32 %43, i32* null, i32 %46)
  store i32 %47, i32* %13, align 4
  br label %48

48:                                               ; preds = %38
  %49 = load i32, i32* %13, align 4
  %50 = icmp eq i32 %49, 0
  br i1 %50, label %26, label %51

51:                                               ; preds = %48, %37
  store i32 0, i32* %6, align 4
  br label %52

52:                                               ; preds = %51, %34
  %53 = load i32, i32* %6, align 4
  ret i32 %53
}

declare dso_local i32 @seekdir(i32*, i32) #1

declare dso_local %struct.dirent* @readdir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
